--- a/mysql_connect.php.config
+++ b/mysql_connect.php.config
@@ -1,3 +1,3 @@
 <?php
-$conn == mysqli_connect("localhost", "id" ,"password", "database");
+$conn = mysqli_connect("localhost", "id" ,"password", "database");
 ?>
